[tool.poetry]
name = "currency-calculator"
version = "0.1.0"
description = ""
authors = ["Denis Beloglazov <den@beloglazov.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
alembic = "^1.12.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
uvicorn = "^0.24.0.post1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "alembic"
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.8
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "ANN",
    "I",
    "T",
    "A",
    "B",
    "DTZ",
    "C4",
    "S",
    "W",
    "E",
    "C",
    "N",
    "U",
    "YTT",
    "ASYNC",
    "FBT",
    "COM",
    "EM",
    "FA",
    "ISC",
    "INP",
    "PIE",
    "PYI",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "PL",
    "TRY",
    "PERF",
    "LOG",
    "RUF",
]
ignore = ["ANN101", "E501", "PLR6301", "COM812", "ISC001", "ANN102", "B008", "PLW3201"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
